--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "color": "^4.2.3",
     "randomcolor": "^0.6.2",
     "react": "^18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
